test/visibility/relative-use/require-relative-use.good
require-relative-use.chpl:7: error: Cannot use module 'SubM'
require-relative-use.chpl:3: note: a module named 'SubM' is defined here
require-relative-use.chpl:7: note: full path or explicit relative use required
require-relative-use.chpl:7: note: please specify the full path to the module
require-relative-use.chpl:7: note: or use a relative use e.g. 'use this.M' or 'use super.M'
